--- a/css/main.scss
+++ b/css/main.scss
@@ -233,6 +233,9 @@ nav {
   cursor: pointer;
 }
 
+
+// Media Queries
+
 @media only screen and (min-width: 768px) {
   .mobile-menu, .mobile-menu-exit {
     display: none;
@@ -241,6 +244,7 @@ nav {
   .navbar .container {
     display: grid;
     grid-template-columns: 180px auto;
+    justify-content: unset;
   }
 
   .navbar nav {
@@ -298,5 +302,107 @@ nav {
     display: flex;
     justify-content: space-between;
     text-align: left;
+
+    .left-col {
+      margin: 3em 3em 0 5em;
+
+      h1 {
+        font-size: 3em;
+        width: 90%;
+      }
+    }
+  }
+
+  .hero-img {
+    width: 30%;
+    margin-right: 8em;
+  }
+
+  .hero-cta {
+    display: flex;
+  }
+  .primary-cta {
+    margin-right: 1em;
+  }
+
+  ul.features-list {
+    display: block;
+    margin-left: 5em;
+
+    li {
+      font-size: 1.4em;
+
+      &:before {
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+
+  .features-section {
+    position: relative;
+  }
+
+  .features-section img {
+    display: block;
+    position: absolute;
+    right: 0;
+    width: 350px;
+    bottom: -2em;
+  }
+
+  .testimonials-section ul {
+    display: flex;
+
+    li {
+      margin: 0 1em;
+    }
+  }
+
+  .contact-section {
+    position: relative;
+
+    .container {
+      display: flex;
+    }
+  }
+
+  .contact-right {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 45%;
+    height: 100%;
+
+    iframe {
+      height: 100%;
+    }
+  }
+}
+
+
+
+@media only screen and (min-width: 1450px) {
+  .features-section {
+
+    &:before {
+      content: '';
+      position: absolute;
+      width: 10%;
+      height: 20em;
+      background: var(--primary-color);
+      left:0;
+      top: -4em;
+    }
+
+    &:after {
+      content: '';
+      position: absolute;
+      width: 10%;
+      height: 20em;
+      background: url(../images/dots.svg) no-repeat;
+      left:4.5em;
+      top: 2em;
+    }
   }
 }
