--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 :root {
-  --primary-color:#007AF3;
+  --primary-color:#efcc07;
 }
 
 body {
   background: #f2f2f2;
   margin: 0;
-  font-family: "Poppins";
+  font-family: "Roboto", sans-serif;
 }
 
 .navbar {
@@ -122,7 +122,7 @@ ul.features-list li:before {
   color: white;
 }
 .testimonials-section li {
-  background: #006BD6;
+  background: #000000;
   text-align: center;
   padding: 2em 1em;
   width: 80%;
@@ -132,7 +132,7 @@ ul.features-list li:before {
 .testimonials-section li img {
   width: 5em;
   height: 5em;
-  border: 5px solid #006BD6;
+  border: 5px solid #ff0000;
   border-radius: 50%;
   margin-top: -4.5em;
 }
