changed --primary color

--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,7 @@
 
 
 :root {
-  --primary-color:#efcc07;
+  --primary-color:#a80041;
 }
 
 body {
@@ -148,7 +148,7 @@ ul.features-list {
       img {
         width: 5em;
         height: 5em;
-        border: 5px solid #ff0000;
+        border: 5px solid white;
         border-radius: 50%;
         margin-top: -4.5em;
       }
