--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 :root {
-  --primary-color:#efcc07;
+  --primary-color:#a80041;
 }
 
 body {
@@ -132,7 +132,7 @@ ul.features-list li:before {
 .testimonials-section li img {
   width: 5em;
   height: 5em;
-  border: 5px solid #ff0000;
+  border: 5px solid white;
   border-radius: 50%;
   margin-top: -4.5em;
 }
